# Python-projects

./: Projects.docx  README(incomplete).docx  README.md
Dogfight 10/src/com/company/: Display_Applet.java  Game.java  MyPlane.java  Plane.java  Window.java
Padding-oracle/: README.md  poa.py
TEN-app/: Dockerfile  requirements.txt  torChecker_refresh.py
ants/: .ok_history  ants.py
hog/: .ok_history  hog.py
maps/: .ok_history  abstractions.py  recommend.py  utils.py
packageTest/: README.md  main.py  pyproject.toml
scheme/: .ok_history  questions.scm  scheme.py  scheme_reader.py  t.py  tests.scm
