[project]
name = "packageTest"
version = "0.0.1"
authors = [
  { name="Yubang Chen", email="yubangchen@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bchen39/Python-projects/tree/main/packageTest"
#Issues = "https://github.com/pypa/sampleproject/issues"